# rou2exOS

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build_and_run.sh  linker.ld  midi.py  mkdocs.yml  sonar-project.properties  tempstash.txt  terminus-font.psf  x86_64-r2.json
.cargo/: config.toml
configs/: garn.cfg  init.rc
docs/: ABI_OVERVIEW.md  build.md  index.md  r2-net-arch-v0.11.dot  r2apps.md  sdk.md  shell.md
docs/ABI/: syscall_specification.md  type_definitions.md
docs/filesystem/: fat12.md  iso9660.md  overview.md
docs/init/: overview.md  subsystems.md
docs/input/: keyboard.md  mouse.md  overview.md
docs/memory/: allocators.md  overview.md
docs/multitasking/: IPC.md  process.md  scheduler.md
docs/networking/: hardware.md  overview.md  protocols.md
docs/video/: overview.md  vga.md
iso/boot/: boot.asm  boot.asm.bak  kernel_graphics.elf  mb2.asm
kernel/: .gitignore  Cargo.toml  Makefile  README.md  bochsrc.txt  link.ld  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/iso/boot/: boot.asm
kernel/iso/boot/grub/: grub.cfg
kernel/src/: int.rs  int.rs.bak  macros.rs  main.rs  main.rs.bak  multiboot2.rs  multiboot2_header.rs
kernel/src/acpi/: shutdown.rs
kernel/src/app/: editor.rs  game.rs  http_server.rs  menu.rs  mod.rs  snake.rs  tcp_handler.rs
kernel/src/app/snake/: engine.rs  menu.rs  mod.rs  score.rs
kernel/src/fs/: block.rs  entry.rs  fat12.rs  fs.rs  mod.rs
kernel/src/fs/fat12/: check.rs  fs.rs  table.rs
kernel/src/init/: ascii.rs  boot.rs  boot.rs.bak  color.rs  config.rs  cpu.rs  fs.rs  mod.rs
kernel/src/input/: cmd.rs  keyboard.rs  mod.rs  port.rs
kernel/src/mem/: bump.rs  c.rs
kernel/src/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  rtl8139.rs  serial.rs  slip.rs  tcp.rs  udp.rs
kernel/src/sound/: midi.rs
kernel/src/time/: mod.rs  rtc.rs
kernel/src/vga/: buffer.rs  mod.rs  screen.rs  write.rs
src/: debug.rs  macros.rs  main.rs  multiboot2.rs
src/_app/: editor.rs  http_udp.rs  tcp_handler.rs
src/_tui/: app.rs  screen.rs  widget.rs
src/abi/: idt.rs  int_7f.asm  int_80.asm  mod.rs  syscall.rs  timer_interrupt.asm
src/api/: idt.rs  int_7f.asm  int_80.asm  syscall.rs
src/app/: editor.rs  editor.rs.bak  ether.rs  http_server.rs  mod.rs  tcp_handler.rs
src/audio/: beep.rs  midi.rs
src/fs/: block.rs  mod.rs
src/init/: ascii.rs  boot.rs  check.rs  (+18 more)
(+95 files in other folders)
