[package]
name = "kernel"
description = ""
version = "0.7.3"
edition = "2021"
authors = ["krusty <krusty@vxn.dev>"]

[build-dependencies]
nasm = "0.0.1"

[dependencies]
#compiler_builtins = { version = "0.1", features = ["mem"] }
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
spin = "0.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
lto = false
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
