cargo-features = ["panic-immediate-abort"]

[package]
name = "kernel"
description = ""
version = "0.10.7"
edition = "2021"
authors = ["krusty <krusty@vxn.dev>"]

[dependencies]
x86_64 = { version = "0.15.4", default-features = false, features = [
    "instructions",
    "abi_x86_interrupt",
] }
spin = "0.10.0"


[features]
kernel_text = []
kernel_graphics = []
# Enable rprint!/rprintn!/rprintb! output on COM1. 
serial_debug = []


[profile.dev]
panic = "abort"
debug = true
opt-level = 0
lto = false


[profile.release]
lto = false
panic = "abort"
debug = false


[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
