[package]
name = "kernel"
description = ""
version = "0.4.0"
edition = "2024"
authors = ["krusty <krusty@vxn.dev>"]

[dependencies]
#bootloader = "0.9"
#bootloader_api = "*"
x86_64 = { version = "0.14", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
lto = false
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
